--- a/index.html
+++ b/index.html
@@ -31,14 +31,33 @@
                 <a href="#"><i class='bx bxl-github'></i></a>
                 <a href="#"><i class='bx bxl-instagram'></i></a>
             </div>
+
+            <div class="menu-icon"><i class="bx bx-menu"></i></div>
         </header>
+
+        <div class="sidebar">
+            <div class="close-icon"><i class="bx bx-x"></i></div>
+
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Project</a></li>
+            </ul>
+
+            <div class="social-icons">
+                <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="#"><i class='bx bxl-github'></i></a>
+                <a href="#"><i class='bx bxl-instagram'></i></a>
+            </div>
+        </div>
 
         <div class="blackhole-box">
             <video loop autoplay muted plays-inline src="videos/blackhole.mp4" type="video/mp4"></video>
         </div>
 
         <section class="hero">
-            <div class="hero-info">
+            <div class="hero-info autoblur">
                 <div class="hero-info-tittle">
                     <i class='bx bxl-sketch'></i>
                     front-end developer Portifolio
@@ -54,7 +73,7 @@
             </div>
 
             <div class="hero-vid-box">
-                <video autoplay loop muted plays-inline src="videos/hero-video.mp4" type="video/mp4"></video>
+                <video class="autoblur" autoplay loop muted plays-inline src="videos/hero-video.mp4" type="video/mp4"></video>
             </div>
             <div class="scroll-down">
 
@@ -62,7 +81,7 @@
         </section>
 
         <section class="info-section">
-            <h1 class="section-tittle">
+            <h1 class="section-tittle autodisplay">
                 Hello, There
             </h1>
             <div class="info-cards">
@@ -99,6 +118,135 @@
                 </div>
             </div>
         </section>
+
+        <section class="my-project">
+            <h1 class="section-tittles autodisplay">My Projects </h1>
+            <div class="project-card">
+                <div class="project-vidbox autoblur">
+                    <video id="projectvid1" src="videos/project1.mp4" type="video/mp4"></video>
+                    <div class="hover-sign">
+
+                    </div>
+                </div>
+
+                <div class="project-info fadeInRigth">
+                    <h1>Animated <span class="gradient">Gaming</span> website</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui commodi numquam, cum dolore
+                        sapiente, placeat mollitia exercitationem adipisci illo dolores quam autem atque voluptatibus
+                        dolor temporibus ut corrupti eos repudiandae.</p>
+
+                    <button><i class='bx bx-link-external'></i>Website</button>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-vidbox autoblur">
+                    <video id="projectvid2" src="videos/project2.mp4" type="video/mp4"></video>
+                </div>
+
+                <div class="project-info fadeInRigth">
+                    <h1>Animated <span class="gradient">Gaming</span> website</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui commodi numquam, cum dolore
+                        sapiente, placeat mollitia exercitationem adipisci illo dolores quam autem atque voluptatibus
+                        dolor temporibus ut corrupti eos repudiandae.</p>
+
+                    <button><i class='bx bx-link-external'></i>Website</button>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-vidbox autoblur">
+                    <video id="projectvid3" src="videos/project3.mp4" type="video/mp4"></video>
+                </div>
+
+                <div class="project-info fadeInRigth">
+                    <h1>Animated <span class="gradient">Gaming</span> website</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui commodi numquam, cum dolore
+                        sapiente, placeat mollitia exercitationem adipisci illo dolores quam autem atque voluptatibus
+                        dolor temporibus ut corrupti eos repudiandae.</p>
+
+                    <button><i class='bx bx-link-external'></i>Website</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="skills-section">
+            <h1 class="section-tittle autodisplay">My Skills</h1>
+            <div class="skills-box">
+                <img class="skills-image" src="images/digital brain.png" alt="skills-image">
+
+                <div class="designer autodisplay">
+                    <h1 class="gradient">Designer <i class="bx bx-laptop"></i>></h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis repudiandae numquam
+                        tempore laudantium, recusandae odit veniam animi inventore nobis velit quod vero iusto sint
+                        tempora sunt? Voluptatem necessitatibus est expedita!</p>
+                </div>
+
+                <div class="coder autodisplay">
+                    <h1 class="gradient">Coder <i class="bx bx-code-block"></i>></h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore tempora sit fuga ut, earum
+                        nostrum, cupiditate modi omnis itaque, distinctio nobis deleniti quaerat praesentium saepe!
+                        Perferendis, sint! Illum, excepturi est?</p>
+                </div>
+            </div>
+
+            <div class="slider" reverse="true" style="
+            --width: 100px;
+            --height: 100px;
+            --quantity: 9;
+            ">
+                <div class="list">
+                    <div class="item" style="--position:1"><img src="images/1.png" alt="slider-image"></div>
+                    <div class="item" style="--position:2"><img src="images/2.png" alt="slider-image"></div>
+                    <div class="item" style="--position:3"><img src="images/3.png" alt="slider-image"></div>
+                    <div class="item" style="--position:4"><img src="images/4.png" alt="slider-image"></div>
+                    <div class="item" style="--position:5"><img src="images/5.png" alt="slider-image"></div>
+                    <div class="item" style="--position:6"><img src="images/6.png" alt="slider-image"></div>
+                    <div class="item" style="--position:7"><img src="images/7.png" alt="slider-image"></div>
+                    <div class="item" style="--position:8"><img src="images/8.png" alt="slider-image"></div>
+                    <div class="item" style="--position:9"><img src="images/9.png" alt="slider-image"></div>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="contact-section">
+            <h1 class="section-tittle autodisplay">Les's Talk</h1>
+            <div class="social-box autoblur">
+                <a href="#"><i class="bx bxs-phone-call">+55 47 99743-3986</i></a>
+                <a href="#"><i class="bx bxl-whatsapp">contact me</i></a>
+                <a href="#"><i class="bx bxl-linkedin-square">Linkedin</i></a>
+
+                <div class="social-icons">
+                    <a href="#"><i class="bx bxl-instagram"></a>
+                    <a href="#"><i class="bx bxl-twitter"></a>
+                    <a href="#"><i class="bx bxl-github"></a>
+                </div>
+
+            </div>
+
+
+            <div class="contact-box autoblur">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis asperiores molestias harum, vero ad
+                    adipisci reiciendis, maxime illum aut cum non excepturi ut iste quod dolorem officiis consectetur,
+                    et minus!</p>
+
+                <p>Full name</p>
+                <input type="text" placeholder="Enter your full name">
+
+                <p>Email</p>
+                <input type="email" placeholder="Enter your email">
+
+                <p>Message</p>
+                <input class="input-menssage" type="text" placeholder="Enter your message">
+
+                <button><i class="bx bx-send">Send Message</i></button>
+            </div>
+        </section>
+
+        <footer>
+            <h1>Copyright &copy; 2025 Tokyo</h1>
+        </footer>
     </div>
 
     <script src="app.js"></script>
