--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <div class="item" style="--position:6"><img src="images/6.png" alt="slider-image"></div>
                     <div class="item" style="--position:7"><img src="images/7.png" alt="slider-image"></div>
                     <div class="item" style="--position:8"><img src="images/8.png" alt="slider-image"></div>
-                    <div class="item" style="--position:9"><img src="images/9.png" alt="slider-image"></div>
+
                 </div>
 
             </div>
@@ -218,9 +218,9 @@
                 <a href="#"><i class="bx bxl-linkedin-square">Linkedin</i></a>
 
                 <div class="social-icons">
-                    <a href="#"><i class="bx bxl-instagram"></a>
-                    <a href="#"><i class="bx bxl-twitter"></a>
-                    <a href="#"><i class="bx bxl-github"></a>
+                    <a href="#"><i class="bx bxl-instagram"></i></a>
+                    <a href="#"><i class="bx bxl-twitter"></i></a>
+                    <a href="#"><i class="bx bxl-github"></i></a>
                 </div>
 
             </div>
